--- a/Admin/templates/admin-layout.html
+++ b/Admin/templates/admin-layout.html
@@ -62,6 +62,17 @@
                         <span class="flex-1 ml-3 text-left whitespace-nowrap">Students List</span>
                     </a>
                 </li>
+                <li>
+                    <a href="{% url "time_table" %}"
+                        class="flex items-center w-full p-2 text-base text-gray-900 transition duration-75 rounded-lg group hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700"
+                        aria-controls="dropdown-layouts" data-collapse-toggle="dropdown-layouts">
+                        <svg class="flex-shrink-0 w-6 h-6 !text-gray-700 transition duration-75 group-hover:text-gray-900 dark:text-gray-400 dark:group-hover:text-white"
+                            fill="currentColor" width="20" height="20" xmlns="http://www.w3.org/2000/svg"
+                            aria-hidden="true"viewBox="0 0 256 256"><rect width="256" height="256" fill="none"/><line x1="32" y1="64" x2="32" y2="144" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="24"/><path d="M54.2,216a88.1,88.1,0,0,1,147.6,0" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="24"/><polygon points="224 64 128 96 32 64 128 32 224 64" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="24"/><path d="M169.3,82.2a56,56,0,1,1-82.6,0" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="24"/>
+                        </svg>
+                        <span class="flex-1 ml-3 text-left whitespace-nowrap">Time Table</span>
+                    </a>
+                </li>
                 {% if user.is_faculty %}
                 <li>
                     <a href="{% url "marks" %}"
@@ -120,7 +131,7 @@
     {% endif %}
     <div class="fixed inset-0 z-10 hidden bg-gray-900/50 dark:bg-gray-900/90" id="sidebarBackdrop"></div>
 
-    <div id="main-content" class="relative w-full p-4 h-full overflow-y-auto bg-gray-50 lg:ml-64 dark:bg-gray-900">
+    <div id="main-content" class="relative w-full p-4 h-full overflow-y-auto bg-gray-50  {% if not user.is_student %} lg:ml-64 {% endif %} dark:bg-gray-900">
     <main>
         {%block content%}
 
