--- a/Home/templates/settings/attendance-list.html
+++ b/Home/templates/settings/attendance-list.html
@@ -1,6 +1,13 @@
 {% extends "admin-layout.html" %}
 
 {% block content %}
-    <h1>Admin Dashboard</h1>
-    <p>Welcome to the admin dashboard.</p>
+<div class="p-3 mb-5 bg-white rounded-2xl">
+    <div class="mb-3 flex justify-between items-center">
+        <h4 class="text-base font-semibold">Attendance</h4>
+    </div>
+    <div class="table-responsive">
+        {{attendance | safe }}
+    </div>
+   
+</div>
 {% endblock %}
