--- a/Home/templates/dash-layout.html
+++ b/Home/templates/dash-layout.html
@@ -126,8 +126,8 @@
                             </div>
                         </a>
                         <!-- Dropdown - User Information -->
-                        <div class="dropdown-menu dropdown-menu-right shadow-sm animated--grow-in user-profile-menu !-left-20"
-                            aria-labelledby="userDropdown">
+                        <div class="dropdown-menu dropdown-menu-right shadow-sm animated--grow-in user-profile-menu"
+                            aria-labelledby="userDropdown" style="left: -150px !important;">
                             <div class="px-4 py-6" role="none">
                                 <div class="flex mb-1 justify-start items-center">
                                     <div class="mr-5">
